--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "acquia/blt": "^8.9.7",
+        "acquia/blt": "8.9.7",
         "drupal/webform": "^5.0@beta",
         "drupal/address": "~1.0",
         "drupal/field_group": "^1.0@RC",
